--- a/services/market/src/this/css/index.light.css
+++ b/services/market/src/this/css/index.light.css
@@ -5,5 +5,10 @@
 @import url('./swagger-ui.css');
 
 iframe {
-    position: relative!important;
+    position: absolute!important;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
